<resources>
    <string name="app_name">FBLoginKotlinSample</string>
    <string name="facebook_app_id">194050811513431</string>
    <string name="fb_login_protocol_scheme">fb194050811513431</string>
    <string name="title_activity_ez_info">EzInfo</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_confirm">確定</string>
    <string name="btn_edit">編輯</string>
    <string name="alt_hint">訊息</string>

    <string name="profile_title">個人資訊</string>
    <string name="next">下一步</string>
    <string name="first_name">姓名</string>
    <string name="middle_name">名</string>
    <string name="birthday">生日</string>
    <string name="sex">性別</string>
    <string name="city">居住地</string>
    <string name="profile_check_title">身份驗證</string>
    <string name="user_id">身分證字號</string>
    <string name="user_uuid">ID：</string>
    <string name="release_date">發證日期</string>
    <string name="release_loc">發證地點</string>
    <string name="release_type">領補換類別</string>
    <string name="pass_title">略過</string>
    <string name="done_title">完成</string>

    <string name="trust_trade_order_id">訂單號</string>
    <string name="trust_trade_title">信任交換</string>
    <string name="edt_uuid_title">對方ID</string>
    <string name="edt_uuid_hint">請輸入對方ID</string>
    <string name="edt_trust_score_title">抵押分數</string>
    <string name="edt_trust_score_hint">請輸入抵押分數</string>
    <string name="edt_trade_main_title">交易主旨</string>
    <string name="edt_trade_main_hint">請輸入交易主旨</string>
    <string name="edt_trade_content_title">交易內容</string>
    <string name="edt_trade_content_hint">請輸入交易內容</string>
    <string name="alt_trust_trade_invite">信任交易邀請已送出</string>
    <string name="alt_trust_trade_invite_fail">信任交易邀請失敗，請重新確認</string>

    <string name="order_detail">交易明細</string>
    <string name="order_detail_state">狀態</string>

</resources>
