<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="model"
            type="epost.android.mitake.com.fbloginkotlinsample.viewmodel.FirstProfileViewModel"/>
    </data>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragmentparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bar_pressed_black5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline">


            <EditText
                android:id="@+id/edt_first_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:lines="1"
                android:text="@={model.account.userInfo.name}"
                android:textColor="@color/com_facebook_messenger_blue"/>

            <EditText
                android:id="@+id/edt_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:lines="1"
                android:text="@={model.account.uid}"
                android:textColor="@color/com_facebook_messenger_blue"/>


            <EditText
                android:id="@+id/edt_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:lines="1"
                android:text="@={model.account.userInfo.birthday}"
                android:textColor="@color/com_facebook_messenger_blue"/>


            <EditText
                android:id="@+id/edt_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sex"
                android:lines="1"
                android:text="@={model.account.userInfo.sex}"
                android:textColor="@color/com_facebook_messenger_blue"/>


            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:lines="1"
                android:text="@={model.account.userInfo.address}"
                android:textColor="@color/com_facebook_messenger_blue"/>


        </LinearLayout>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>


    </android.support.constraint.ConstraintLayout>
</layout>